[gd_scene load_steps=28 format=3 uid="uid://ceidf84666hkb"]

[ext_resource type="Script" path="res://market.gd" id="1_7qxpr"]
[ext_resource type="PackedScene" uid="uid://cqy53jroecj1" path="res://market_panel.tscn" id="1_uwqcv"]
[ext_resource type="Texture2D" uid="uid://dmx6ge4sybkwe" path="res://Rocket Anim.png" id="3_7qj7o"]
[ext_resource type="Texture2D" uid="uid://rl3l7kp1dug6" path="res://Plant and Assets.png" id="3_bheqj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ofh20"]
atlas = ExtResource("3_bheqj")
region = Rect2(200, 384, 128, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_xca7l"]
atlas = ExtResource("3_bheqj")
region = Rect2(800, 320, 184, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_67n66"]
atlas = ExtResource("3_bheqj")
region = Rect2(1152, 328, 152, 152)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu3ok"]
atlas = ExtResource("3_bheqj")
region = Rect2(781, 6, 226, 154)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qnmv"]
atlas = ExtResource("3_bheqj")
region = Rect2(471, 337, 200, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yoya"]
atlas = ExtResource("3_bheqj")
region = Rect2(0, 342, 180, 140)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lly1"]
atlas = ExtResource("3_bheqj")
region = Rect2(486, 26, 176, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxat8"]
size = Vector2(144, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jeqe"]
atlas = ExtResource("3_7qj7o")
region = Rect2(0, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg3hp"]
atlas = ExtResource("3_7qj7o")
region = Rect2(160, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx1sr"]
atlas = ExtResource("3_7qj7o")
region = Rect2(320, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_liorj"]
atlas = ExtResource("3_7qj7o")
region = Rect2(480, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yy6g"]
atlas = ExtResource("3_7qj7o")
region = Rect2(640, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy5rb"]
atlas = ExtResource("3_7qj7o")
region = Rect2(800, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_liqxm"]
atlas = ExtResource("3_7qj7o")
region = Rect2(960, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_an7yg"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1120, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7bwf"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1280, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_762d7"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1440, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdoak"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1600, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j3jv"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1760, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hke7"]
atlas = ExtResource("3_7qj7o")
region = Rect2(1920, 0, 160, 960)

[sub_resource type="AtlasTexture" id="AtlasTexture_00gcc"]
atlas = ExtResource("3_7qj7o")
region = Rect2(0, 0, 160, 960)

[sub_resource type="SpriteFrames" id="SpriteFrames_m6ble"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jeqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg3hp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx1sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liorj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yy6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy5rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liqxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an7yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7bwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_762d7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdoak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j3jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hke7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00gcc")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="market" type="Node2D"]
script = ExtResource("1_7qxpr")

[node name="market_popup" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -472.0
offset_top = -112.0
offset_right = -432.0
offset_bottom = -72.0
metadata/_edit_use_anchors_ = true

[node name="Big Flower" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = 224.0
offset_top = 32.0
offset_right = 264.0
offset_bottom = 72.0
plant_key = "Big Flower"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Big Flower"]
z_index = 1
position = Vector2(-277, 32)
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_ofh20")

[node name="Spato" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = -32.0
offset_top = 32.0
offset_right = 8.0
offset_bottom = 72.0
plant_key = "Spato"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Spato"]
position = Vector2(230, 30)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_xca7l")

[node name="Thornato" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = -80.0
offset_top = -160.0
offset_right = -40.0
offset_bottom = -120.0
plant_key = "Thornato"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Thornato"]
z_index = 1
position = Vector2(-21, 31)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_67n66")

[node name="Glowberry" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = 272.0
offset_top = -160.0
offset_right = 312.0
offset_bottom = -120.0
plant_key = "Glowberry"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Glowberry"]
z_index = 1
position = Vector2(-21, 31)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_fu3ok")

[node name="Weird Cactus" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = -120.0
offset_top = -352.0
offset_right = -80.0
offset_bottom = -312.0
plant_key = "Weird Cactus"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Weird Cactus"]
position = Vector2(-23, 33)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_4qnmv")

[node name="Mushroom" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = 312.0
offset_top = -352.0
offset_right = 352.0
offset_bottom = -312.0
plant_key = "Mushroom"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Mushroom"]
position = Vector2(-21, 30)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_1yoya")

[node name="Moonusvie" parent="market_popup" instance=ExtResource("1_uwqcv")]
offset_left = 96.0
offset_top = -504.0
offset_right = 136.0
offset_bottom = -464.0
plant_key = "Moonusvie"

[node name="Sprite2D" type="Sprite2D" parent="market_popup/Moonusvie"]
position = Vector2(-16, 31)
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_4lly1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-8, 8)
shape = SubResource("RectangleShape2D_vxat8")

[node name="Background" type="Node2D" parent="."]
visible = false
position = Vector2(0, -64)

[node name="Polygon2D9" type="Polygon2D" parent="Background"]
position = Vector2(0, -24)
color = Color(0.388235, 0.596078, 1, 0.666667)
polygon = PackedVector2Array(-704, 192, 0, 192, 0, -576, -704, -576)

[node name="Polygon2D" type="Polygon2D" parent="Background"]
color = Color(0.417331, 0.476792, 0.257777, 1)
polygon = PackedVector2Array(-520, -56, -536, -56, -536, -64, -528, -64, -528, -72, -520, -72, -520, -80, -512, -80, -512, -72, -504, -72, -504, -64, -496, -64, -496, -56, -512, -56, -512, -16, -520, -16)

[node name="Polygon2D2" type="Polygon2D" parent="Background"]
position = Vector2(328, 0)
color = Color(0.417331, 0.476792, 0.257777, 1)
polygon = PackedVector2Array(-520, -56, -536, -56, -536, -64, -528, -64, -528, -72, -520, -72, -520, -80, -512, -80, -512, -72, -504, -72, -504, -64, -496, -64, -496, -56, -512, -56, -512, -16, -520, -16)

[node name="Polygon2D5" type="Polygon2D" parent="Background"]
position = Vector2(-48, -192)
color = Color(0.417331, 0.476792, 0.257777, 1)
polygon = PackedVector2Array(-520, -56, -536, -56, -536, -64, -528, -64, -528, -72, -520, -72, -520, -80, -512, -80, -512, -72, -504, -72, -504, -64, -496, -64, -496, -56, -512, -56, -512, -16, -520, -16)

[node name="Polygon2D6" type="Polygon2D" parent="Background"]
position = Vector2(376, -192)
color = Color(0.417331, 0.476792, 0.257777, 1)
polygon = PackedVector2Array(-520, -56, -536, -56, -536, -64, -528, -64, -528, -72, -520, -72, -520, -80, -512, -80, -512, -72, -504, -72, -504, -64, -496, -64, -496, -56, -512, -56, -512, -16, -520, -16)

[node name="Polygon2D3" type="Polygon2D" parent="Background"]
position = Vector2(7, 0)
color = Color(0.415686, 0.478431, 0.258824, 1)
polygon = PackedVector2Array(-416, -16, -416, -344, -256, -344, -256, -360, -248, -360, -248, -352, -240, -352, -240, -344, -232, -344, -232, -336, -240, -336, -240, -328, -248, -328, -248, -320, -256, -320, -256, -336, -408, -336, -408, -16)

[node name="Polygon2D4" type="Polygon2D" parent="Background"]
position = Vector2(-688, -24)
scale = Vector2(-1, 1)
color = Color(0.415686, 0.478431, 0.258824, 1)
polygon = PackedVector2Array(-416, 8, -416, -344, -256, -344, -256, -360, -248, -360, -248, -352, -240, -352, -240, -344, -232, -344, -232, -336, -240, -336, -240, -328, -248, -328, -248, -320, -256, -320, -256, -336, -408, -336, -408, 8)

[node name="Polygon2D7" type="Polygon2D" parent="Background"]
position = Vector2(-208, -152)
color = Color(0.415686, 0.478431, 0.258824, 1)
polygon = PackedVector2Array(-352, -248, -352, -344, -256, -344, -256, -360, -248, -360, -248, -352, -240, -352, -240, -344, -232, -344, -232, -336, -240, -336, -240, -328, -248, -328, -248, -320, -256, -320, -256, -336, -344, -336, -344, -248)

[node name="Polygon2D8" type="Polygon2D" parent="Background"]
position = Vector2(-472, -151)
scale = Vector2(-1, 1)
color = Color(0.415686, 0.478431, 0.258824, 1)
polygon = PackedVector2Array(-352, -248, -352, -344, -256, -344, -256, -360, -248, -360, -248, -352, -240, -352, -240, -344, -232, -344, -232, -336, -240, -336, -240, -328, -248, -328, -248, -320, -256, -320, -256, -336, -344, -336, -344, -248)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(166, -415)
sprite_frames = SubResource("SpriteFrames_m6ble")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
